# mycourses-haskell-clone

./: ChangeLog.md  LICENSE  README.md  mycourses-clone.cabal  mycourses_clone_default.db  stack.yaml
app/: Main.hs
src/: Controller.hs  Database.hs  Model.hs  View.hs
