name:                mycourses-clone
version:             0.0.0.0
author:              Japheth Adhavan, Jason St. George
copyright:           2018 Japheth Adhavan, Jason St. George
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database
                     , Model
                     , View
                     , Controller
                     , Lib
  ghc-options:         -ddump-minimal-imports -fwarn-unused-imports
  build-depends:       base >= 4.7 && < 5
                     , snap == 1.1.*
                     , text
                     , hashmap
                     , aeson >=0.6 && <1.4 
                     , data-default-class
                     , monad-control
                     , monad-logger
                     , resourcet
                     , bytestring
                     , transformers
                     , persistent
                     , persistent-sqlite
                     , persistent-template
  default-language:    Haskell2010

executable mycourses-clone-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-minimal-imports -fwarn-unused-imports
  build-depends:       base
                     , mycourses-clone
                     , snap == 1.1.*
  default-language:    Haskell2010